--- a/lessons/misc-r/full-R-bootcamp/R-basics/05-subsetting.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/05-subsetting.Rmd
@@ -66,7 +66,7 @@ x[0]
 
 6. Referencing objects by their names
 
-```{R, eval = TRUE}
+```{r, eval = TRUE}
 (y <- setNames(x, letters[1:4]))
 
 y[c("d", "c", "a")]
@@ -87,7 +87,7 @@ z[c("a", "d")]
 
 Subsetting a list works in exactly the same way as subsetting an atomic vector. Subsetting a list with [ will always return a list: `[[` and `$`, as described below, let you pull out the components of the list.
 
-```{R, eval = TRUE}
+```{r, eval = TRUE}
 x <- as.list(1:10)
 
 x[1:5]
@@ -97,7 +97,7 @@ x[1:5]
 
 To extract individual elements inside a list, use the `[[` operator
 
-```{R, eval = TRUE}
+```{r, eval = TRUE}
 # to get element 5
 
 x[[5]]
@@ -110,7 +110,7 @@ another_variable <- x[[5]]
 
 Or using their names
 
-```{R, eval = TRUE}
+```{r, eval = TRUE}
 names(x) <- letters[1:5]
 
 x$a
@@ -119,7 +119,7 @@ x[["a"]]
 
 ## Subsetting matrices
 
-```{R, eval = TRUE}
+```{r, eval = TRUE}
 a <- matrix(1:9, nrow = 3)
 colnames(a) <- c("A", "B", "C")
 a[1:2, ]
@@ -136,7 +136,7 @@ a[0, -2]
 
 # Subsetting data frames
 
-```{R, eval = TRUE}
+```{r, eval = TRUE}
 df <- data.frame(x = 1:3, y = 3:1, z = letters[1:3])
 
 df[df$x == 2, ]
