added description of subsetting a matrix

--- a/lessons/misc-r/full-R-bootcamp/R-basics/05-subsetting.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/05-subsetting.Rmd
@@ -107,6 +107,8 @@ x[["a"]]
 
 ## Subsetting matrices
 
+A matrix is subset with two arguments within single brackets, `[]`, and separated by a comma. The first argument specifies the rows, and the second the columns.
+
 ```{r, eval = TRUE}
 a <- matrix(1:9, nrow = 3)
 colnames(a) <- c("A", "B", "C")
