added example of vector recycling

--- a/lessons/misc-r/full-R-bootcamp/R-basics/06-vectorization.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/06-vectorization.Rmd
@@ -26,6 +26,13 @@ x > 2
 x >= 2
 ```
 
+A shorter vector is recycled:
+
+```{r}
+z <- c(1, 2)
+x * z
+```
+
 Matrix operations are also vectorized
 
 ```{r}
