added example demonstrating that matrix operations are performed by column.

--- a/lessons/misc-r/full-R-bootcamp/R-basics/06-vectorization.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/06-vectorization.Rmd
@@ -33,13 +33,19 @@ z <- c(1, 2)
 x * z
 ```
 
-Matrix operations are also vectorized
+Matrix operations are also vectorized:
 
 ```{r}
 x <- matrix(1:4, 2, 2)
 y <- matrix(rep(10, 4), 2, 2)
 x * y # is not matrix multiplication. It's element wise
 x / y # is elementwise division.
+```
+
+Element wise matrix operations are performed by column. In the example below, `y[1, 1]` is multipled by `z[1]`, followed by `y[1, 2]` multiplied by `z[2]`, and then the vector `z` is recycled for multipying the second column of `y`.
+
+```{r}
+y * z
 ```
 
 True matrix multiplication is:
