--- a/lessons/misc-r/full-R-bootcamp/data-manipulation/00-messy_data.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/data-manipulation/00-messy_data.Rmd
@@ -52,7 +52,7 @@ names(dat) <- c("status", "sex", "count")
 
 
 
-In the example below, we use a data file obtained as plain text and clean up incorrect spacing, separators. Then we look up the appropriate metadata 
+In the example below, we use a data file obtained as plain text and clean up incorrect spacing and separators. Then we look up the appropriate metadata 
 
 ```{r, load_data}
 library("stringr")
@@ -65,7 +65,7 @@ rawData <- readLines("data/messy_data.txt")
 length(rawData)
 ```
 
-We've got two issues here. First, we need to split the dates into two separate fields.Next we need to remove the uneven spaces and split the remaining data into individual cells. We can write functions to accomplish both tasks.
+We've got two issues here. First, we need to split the dates into two separate fields. Next we need to remove the uneven spaces and split the remaining data into individual cells. We can write functions to accomplish both tasks.
 
 
 ```{r clean_up}
@@ -112,6 +112,7 @@ formatData  <- function(rawD) {
 
     return(as.data.frame(t(results)))
 } 
+```
 
 ```{r, clean_data}
 first_pass <- sapply(1:length(rawData), function(x) {
@@ -125,9 +126,7 @@ names(cleaned_data) <- c("observer", "date_first", "date_last", "id", "distance"
 ```{r, fix_dates}
 # str is short for structure
 str(cleaned_data)
-
 cleaned_data$date_first
-
 # oops, we forgot to add the year. All these data were collected in 2012
 cleaned_data$date_first  <- paste0(cleaned_data$date_first, "/12")
 cleaned_data$date_last  <- paste0(cleaned_data$date_last, "/12")
