--- a/lessons/misc-r/full-R-bootcamp/data-manipulation/00-messy_data.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/data-manipulation/00-messy_data.Rmd
@@ -43,7 +43,8 @@ dat <- melt(dat, "status")
 Add some nice metadata that was absent before:
 
 ```{r, eval = TRUE}
-names(dat) <- c("status", "sex", "count") 
+names(dat) <- c("status", "sex", "count")
+dat
 ```
 
 ---
@@ -58,6 +59,7 @@ In the example below, we use a data file obtained as plain text and clean up inc
 library("stringr")
 # If you don't have this package simply run install.packages("stringr")
 rawData <- readLines("data/messy_data.txt")
+rawData
 ```
 
 ```{r examine_data}
