--- a/lessons/misc-r/full-R-bootcamp/data-manipulation/01-input-output.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/data-manipulation/01-input-output.Rmd
@@ -6,7 +6,7 @@
 ```{r, eval = FALSE}
 x <- scan("data_file.txt")
 # add a separator
-x <- scan("../data/messy_data.txt", what=" ", sep = "\n")
+x <- scan("data/messy_data.txt", what=" ", sep = "\n")
 # or read data from the console
 x <- scan()
 # keep entering values and hit an empty return key to end
@@ -30,14 +30,14 @@ df <- read.table("data.dat", header = TRUE)
 or using `readLines`
 
 ```{r, eval = TRUE}
-dt <- readLines("../data/messy_data.txt")
+dt <- readLines("data/messy_data.txt")
 head(dt)
 ```
 
 ## Files from the web
 
 ```{r, eval = TRUE}
-url <- "../data/climate.csv"
+url <- "data/climate.csv"
 my_data <- read.csv(url, header = TRUE)
 head(my_data)
 ```
