The iris dataset was not loaded during the data-manipulation section. The code would still work since R will find iris in the attached package. I just have them load it into the global env with data, but an alternative option would be to use it as an opportunity to reiterate scoping.

--- a/lessons/misc-r/full-R-bootcamp/data-manipulation/01-input-output.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/data-manipulation/01-input-output.Rmd
@@ -62,7 +62,7 @@ setwd()
 
 ## Writing files
 
-Saving files is easy in R. We have loaded the `iris` dataset into our memory. Can you save this back to a `csv` file to disk with the name `tgac_iris.csv`?
+Saving files is easy in R. Load the `iris` dataset by running `data(iris)`. Can you save this back to a `csv` file to disk with the name `tgac_iris.csv`?
 
 What commands did you use?
 
