Created file to hold global chunk options. Specifically this is to set the chunk option tidy to FALSE, which means code chunks will appear exactly as written in the RMarkdown file. Each RMarkdown file sources this file with the global chunk options making it easy to change the behaviour of all the lessons at once. I added the chunk which sources this file to all the RMarkdown files using the following command:
```
find full-R-bootcamp/ -name "*Rmd" -exec sed -i 1i'\`\`\`{r, include = FALSE}\nsource("../chunk_options.R")\n\`\`\`' {} \;
```

--- a/lessons/misc-r/full-R-bootcamp/R-basics/01-basics-of-R.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/01-basics-of-R.Rmd
@@ -1,3 +1,6 @@
+```{r, include = FALSE}
+source("../chunk_options.R")
+```
 # Very basics of R
 
 R is a versatile, open source programming/scripting language that's useful both for statistics but also data science. Inspired by the programming language [`S`][S].
